update clickhouse from 20.5.3.27 to 20.9.2.20

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Start-up Visualizer</title>
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml">
+    <title>Performance Dashboard</title>
   </head>
   <body>
     <noscript>
