--- a/dashboard/app/index.html
+++ b/dashboard/app/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Performance Dashboard</title>
 </head>
-<body>
+<body class="h-full">
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
